@@ -216,6 +216,20 @@ name|lucene
 operator|.
 name|search
 operator|.
+name|Rescorer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
 name|ScoreDoc
 import|;
 end_import
@@ -731,6 +745,81 @@ argument_list|)
 return|;
 block|}
 block|}
+DECL|class|ReRankQueryRescorer
+specifier|private
+specifier|final
+class|class
+name|ReRankQueryRescorer
+extends|extends
+name|QueryRescorer
+block|{
+DECL|field|reRankWeight
+specifier|final
+name|double
+name|reRankWeight
+decl_stmt|;
+DECL|method|ReRankQueryRescorer
+specifier|public
+name|ReRankQueryRescorer
+parameter_list|(
+name|Query
+name|reRankQuery
+parameter_list|,
+name|double
+name|reRankWeight
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|reRankQuery
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|reRankWeight
+operator|=
+name|reRankWeight
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|combine
+specifier|protected
+name|float
+name|combine
+parameter_list|(
+name|float
+name|firstPassScore
+parameter_list|,
+name|boolean
+name|secondPassMatches
+parameter_list|,
+name|float
+name|secondPassScore
+parameter_list|)
+block|{
+name|float
+name|score
+init|=
+name|firstPassScore
+decl_stmt|;
+if|if
+condition|(
+name|secondPassMatches
+condition|)
+block|{
+name|score
+operator|+=
+name|reRankWeight
+operator|*
+name|secondPassScore
+expr_stmt|;
+block|}
+return|return
+name|score
+return|;
+block|}
+block|}
 DECL|class|ReRankQuery
 specifier|private
 specifier|final
@@ -747,24 +836,34 @@ init|=
 name|defaultQuery
 decl_stmt|;
 DECL|field|reRankQuery
+specifier|final
 specifier|private
 name|Query
 name|reRankQuery
 decl_stmt|;
 DECL|field|reRankDocs
+specifier|final
 specifier|private
 name|int
 name|reRankDocs
 decl_stmt|;
 DECL|field|length
+specifier|final
 specifier|private
 name|int
 name|length
 decl_stmt|;
 DECL|field|reRankWeight
+specifier|final
 specifier|private
 name|double
 name|reRankWeight
+decl_stmt|;
+DECL|field|reRankQueryRescorer
+specifier|final
+specifier|private
+name|Rescorer
+name|reRankQueryRescorer
 decl_stmt|;
 DECL|field|boostedPriority
 specifier|private
@@ -915,6 +1014,18 @@ name|length
 operator|=
 name|length
 expr_stmt|;
+name|this
+operator|.
+name|reRankQueryRescorer
+operator|=
+operator|new
+name|ReRankQueryRescorer
+argument_list|(
+name|reRankQuery
+argument_list|,
+name|reRankWeight
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|wrap
 specifier|public
@@ -1036,9 +1147,7 @@ name|reRankDocs
 argument_list|,
 name|length
 argument_list|,
-name|reRankQuery
-argument_list|,
-name|reRankWeight
+name|reRankQueryRescorer
 argument_list|,
 name|cmd
 argument_list|,
@@ -1257,9 +1366,7 @@ name|ReRankWeight
 argument_list|(
 name|mainQuery
 argument_list|,
-name|reRankQuery
-argument_list|,
-name|reRankWeight
+name|reRankQueryRescorer
 argument_list|,
 name|searcher
 argument_list|,
@@ -1277,20 +1384,16 @@ name|ReRankWeight
 extends|extends
 name|FilterWeight
 block|{
-DECL|field|reRankQuery
-specifier|private
-name|Query
-name|reRankQuery
-decl_stmt|;
 DECL|field|searcher
 specifier|private
 name|IndexSearcher
 name|searcher
 decl_stmt|;
-DECL|field|reRankWeight
+DECL|field|reRankQueryRescorer
+specifier|final
 specifier|private
-name|double
-name|reRankWeight
+name|Rescorer
+name|reRankQueryRescorer
 decl_stmt|;
 DECL|method|ReRankWeight
 specifier|public
@@ -1299,11 +1402,8 @@ parameter_list|(
 name|Query
 name|mainQuery
 parameter_list|,
-name|Query
-name|reRankQuery
-parameter_list|,
-name|double
-name|reRankWeight
+name|Rescorer
+name|reRankQueryRescorer
 parameter_list|,
 name|IndexSearcher
 name|searcher
@@ -1335,21 +1435,15 @@ argument_list|)
 expr_stmt|;
 name|this
 operator|.
-name|reRankQuery
-operator|=
-name|reRankQuery
-expr_stmt|;
-name|this
-operator|.
 name|searcher
 operator|=
 name|searcher
 expr_stmt|;
 name|this
 operator|.
-name|reRankWeight
+name|reRankQueryRescorer
 operator|=
-name|reRankWeight
+name|reRankQueryRescorer
 expr_stmt|;
 block|}
 DECL|method|explain
@@ -1379,50 +1473,7 @@ name|doc
 argument_list|)
 decl_stmt|;
 return|return
-operator|new
-name|QueryRescorer
-argument_list|(
-name|reRankQuery
-argument_list|)
-block|{
-annotation|@
-name|Override
-specifier|protected
-name|float
-name|combine
-parameter_list|(
-name|float
-name|firstPassScore
-parameter_list|,
-name|boolean
-name|secondPassMatches
-parameter_list|,
-name|float
-name|secondPassScore
-parameter_list|)
-block|{
-name|float
-name|score
-init|=
-name|firstPassScore
-decl_stmt|;
-if|if
-condition|(
-name|secondPassMatches
-condition|)
-block|{
-name|score
-operator|+=
-name|reRankWeight
-operator|*
-name|secondPassScore
-expr_stmt|;
-block|}
-return|return
-name|score
-return|;
-block|}
-block|}
+name|reRankQueryRescorer
 operator|.
 name|explain
 argument_list|(
@@ -1446,37 +1497,32 @@ name|ReRankCollector
 extends|extends
 name|TopDocsCollector
 block|{
-DECL|field|reRankQuery
-specifier|private
-name|Query
-name|reRankQuery
-decl_stmt|;
 DECL|field|mainCollector
+specifier|final
 specifier|private
 name|TopDocsCollector
 name|mainCollector
 decl_stmt|;
 DECL|field|searcher
+specifier|final
 specifier|private
 name|IndexSearcher
 name|searcher
 decl_stmt|;
 DECL|field|reRankDocs
+specifier|final
 specifier|private
 name|int
 name|reRankDocs
 decl_stmt|;
 DECL|field|length
+specifier|final
 specifier|private
 name|int
 name|length
 decl_stmt|;
-DECL|field|reRankWeight
-specifier|private
-name|double
-name|reRankWeight
-decl_stmt|;
 DECL|field|boostedPriority
+specifier|final
 specifier|private
 name|Map
 argument_list|<
@@ -1485,6 +1531,12 @@ argument_list|,
 name|Integer
 argument_list|>
 name|boostedPriority
+decl_stmt|;
+DECL|field|reRankQueryRescorer
+specifier|final
+specifier|private
+name|Rescorer
+name|reRankQueryRescorer
 decl_stmt|;
 DECL|method|ReRankCollector
 specifier|public
@@ -1496,11 +1548,8 @@ parameter_list|,
 name|int
 name|length
 parameter_list|,
-name|Query
-name|reRankQuery
-parameter_list|,
-name|double
-name|reRankWeight
+name|Rescorer
+name|reRankQueryRescorer
 parameter_list|,
 name|QueryCommand
 name|cmd
@@ -1523,12 +1572,6 @@ name|super
 argument_list|(
 literal|null
 argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|reRankQuery
-operator|=
-name|reRankQuery
 expr_stmt|;
 name|this
 operator|.
@@ -1632,9 +1675,9 @@ name|searcher
 expr_stmt|;
 name|this
 operator|.
-name|reRankWeight
+name|reRankQueryRescorer
 operator|=
-name|reRankWeight
+name|reRankQueryRescorer
 expr_stmt|;
 block|}
 DECL|method|getTotalHits
@@ -1846,50 +1889,7 @@ expr_stmt|;
 name|TopDocs
 name|rescoredDocs
 init|=
-operator|new
-name|QueryRescorer
-argument_list|(
-name|reRankQuery
-argument_list|)
-block|{
-annotation|@
-name|Override
-specifier|protected
-name|float
-name|combine
-parameter_list|(
-name|float
-name|firstPassScore
-parameter_list|,
-name|boolean
-name|secondPassMatches
-parameter_list|,
-name|float
-name|secondPassScore
-parameter_list|)
-block|{
-name|float
-name|score
-init|=
-name|firstPassScore
-decl_stmt|;
-if|if
-condition|(
-name|secondPassMatches
-condition|)
-block|{
-name|score
-operator|+=
-name|reRankWeight
-operator|*
-name|secondPassScore
-expr_stmt|;
-block|}
-return|return
-name|score
-return|;
-block|}
-block|}
+name|reRankQueryRescorer
 operator|.
 name|rescore
 argument_list|(
@@ -2129,50 +2129,7 @@ expr_stmt|;
 name|TopDocs
 name|rescoredDocs
 init|=
-operator|new
-name|QueryRescorer
-argument_list|(
-name|reRankQuery
-argument_list|)
-block|{
-annotation|@
-name|Override
-specifier|protected
-name|float
-name|combine
-parameter_list|(
-name|float
-name|firstPassScore
-parameter_list|,
-name|boolean
-name|secondPassMatches
-parameter_list|,
-name|float
-name|secondPassScore
-parameter_list|)
-block|{
-name|float
-name|score
-init|=
-name|firstPassScore
-decl_stmt|;
-if|if
-condition|(
-name|secondPassMatches
-condition|)
-block|{
-name|score
-operator|+=
-name|reRankWeight
-operator|*
-name|secondPassScore
-expr_stmt|;
-block|}
-return|return
-name|score
-return|;
-block|}
-block|}
+name|reRankQueryRescorer
 operator|.
 name|rescore
 argument_list|(
